added css changes

--- a/index.html
+++ b/index.html
@@ -3,21 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- links -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css”>
     <link rel="stylesheet" href="style.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
+    <div class="flexbox-item flexbox-items">
+        <div class="jumbotron jumbotron-fluid">
+            <h1 class="display">
+            <strong>
+            <i class="fa fa-cloud-sun"></i>Weather Dashboard</strong>
+        </h1>
+    </div>
+</div>
+<div class="container">
+    <div class="wrapperOne">
+        <div class="input-group mb-3">
+            <input id="searchID" type="text" class="form-control" placeholder="Search a city here"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-outline-primary" type="button" class="fa fa-search" id="searchBtn">Search</button>
+            </div>
+        </div>
 
+        <div class="card" style="width: 18rem;">
+            <ul id="searchHistory" class="list-group list-group-flush">
+            </ul>
+        </div>
+    </div>
 
+    <div class="wrapperTwo">
+        <div class="card">
+            <h5 id="current-place" class="card-header">City Weather Search</h5>
+            <div class="card-body">
+                <p class="card-text"><span>Temperature: </span> <span id="temps"></span></p>
+                <p class="card-text"><span>Humidity: </span> <span id="humidity"></span></p>
+                <p class="card-text"><span>Wind Speed: </span> <span id="winds"></span></p>
+                <p class="card-text"><span>UV Index: </span><span id="uv"></span></p>
+            </div>
+        </div>
 
+        <br>
 
+        <h4>5-Day Forecast:</h4>
 
+        <br>
 
+        <div class="wrapperThree"></div>
+    </div>
 
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script type="text/java" src="script.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script type="text/java" src="script.js"></script>
 </body>
 </html>
