--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- links -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css”>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css”>
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -14,15 +14,15 @@
         <div class="jumbotron jumbotron-fluid">
             <h1 class="display">
             <strong>
-            <i class="fa fa-cloud-sun"></i>Weather Dashboard</strong>
+            <i class="fas fa-sun"></i>Weather Dashboard</strong>
         </h1>
     </div>
 </div>
 <div class="container">
     <div class="wrapperOne">
         <div class="input-group mb-3">
-            <input id="searchID" type="text" class="form-control" placeholder="Search a city here"
-                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input id="searchID" type="text" class="form-control" placeholder="Search for location"
+                aria-label="Recipient name" aria-describedby="button-addon-two">
             <div class="input-group-append">
                 <button class="btn btn-outline-primary" type="button" class="fa fa-search" id="searchBtn">Search</button>
             </div>
@@ -55,6 +55,6 @@
     </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script type="text/java" src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
